# RobotWallFollowing_ReinforcementLearning

./: .gitignore  README.md  stingray_setup.bash
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.bash  setup.sh
catkin_ws/devel/lib/pkgconfig/: P2_D1.pc  reinforcementLearning.pc  reinforcement_learning.pc  stingray_sim.pc
catkin_ws/devel/share/P2_D1/cmake/: P2_D1Config.cmake
catkin_ws/src/: currentScans.txt  previousScans.txt  qFtable.txt  qITable.txt
catkin_ws/src/reinforcement_learning/: CMakeLists.txt  README  TritonReinforecementTD  TritonReinforecementTDImproved  package.xml
catkin_ws/src/reinforcement_learning/launch/: wall_follow_complex.launch  wall_follow_reinforcement_learning.launch  wall_follow_simple.launch
catkin_ws/src/reinforcement_learning/src/: OtherInfo.txt  qFtable.txt  qNewtable.txt  q_complex.py  q_learning.py  q_simple.py  q_table.txt
catkin_ws/src/stingray_sim/launch/: frames.gv  gazebo_base.launch  gazebo_teleop.launch  rviz.launch  slam.launch  slam_teleop.launch  wall_following_v1.launch
catkin_ws/src/stingray_sim/plugins/: model_push.cc
catkin_ws/src/stingray_sim/src/: draw_path.py  position_publisher.py  teleop_robot.py
catkin_ws/src/stingray_sim/worlds/: largemaze-triton-lidar.world
catkin_ws/stingray_sim/: CMakeLists.txt
catkin_ws/stingray_sim/launch/: triton_world.launch
catkin_ws/stingray_sim/plugins/: model_push.cc
catkin_ws/stingray_sim/src/: teleop_robot.py
catkin_ws/stingray_sim/worlds/: triton_world.world
models/triton/: model.sdf
plugins/: CMakeLists.txt  model_push.cc
(+4 files in other folders)
